# RealTimeGenerateCloud

./: .gitignore  CMakeSettings.json  config.json
data/: caltab_400.descr
generate_cloud_core/: CMakeLists.txt  imgui.ini
generate_cloud_core-udp/: CMakeLists.txt
generate_cloud_core-udp/include/cli/: cli_app.h
generate_cloud_core-udp/include/core/: logger.h  merger_task.h  real_time_reconstruction_task.h  reconstruction_task.h  system_params.h  task.h  task_manager.h
generate_cloud_core-udp/include/gui/: app.h  log_panel.h  main_window.h  reconstruction_page.h  task_panel.h
generate_cloud_core-udp/include/messages/: params_event.h
generate_cloud_core-udp/src/: main.cpp
generate_cloud_core-udp/src/core/: calibration_task.cpp  merger_task.cpp  real_time_reconstruction_task.cpp  reconstruction_task.cpp  system_params.cpp  task_manager.cpp
generate_cloud_core-udp/src/gui/: log_panel.cpp  main_window.cpp  params_panel.cpp  reconstruction_page.cpp  task_panel.cpp
generate_cloud_core/include/cli/: cli_app.h
generate_cloud_core/include/core/: app_controller.h  calibration_task.h  logger.h  real_time_reconstruction_task.h  reconstruction_task.h  subscriber.h  subscriber_adapter.h  system_params.h  task.h  task_manager.h
generate_cloud_core/include/gui/: calibration_page.h  main_window.h  params_panel.h
generate_cloud_core/include/messages/: params_event.h
generate_cloud_core/src/: main.cpp
generate_cloud_core/src/cli/: cli_app.cpp
generate_cloud_core/src/core/: app_controller.cpp  calibration_task.cpp  logger.cpp  merger_task.cpp  real_time_reconstruction_task.cpp  reconstruction_task.cpp  system_params.cpp  task_manager.cpp  task_manager_impl.cpp
generate_cloud_core/src/gui/: app.cpp  calibration_page.cpp  log_panel.cpp  main_window.cpp  params_panel.cpp  task_panel.cpp
scripts/: cloud_generating.py  cloud_merging.py  image_stabilizer.py  image_stabilizing.py  ins_parsing.py  log_parsing.py  process.py  read_bil.py  test.py
scripts/demo/: read_bil_demo.py
utils/: binary_reader.py  config_load.py  image_saver.py  image_stabilizer.py  ins_reader.py  log.py  log_time_mapper.py
